# url_discovery_engine

./: .env.example  .gitignore  README.md  __init__.py  config.yaml  noxfile.py  pyproject.toml
crawler_with_router/: db_query.py  db_setup.py  extractor.py  health_check.py  launch_fleet.sh  parsers.py  spider.py  spider_trap_detector.py
crawler_with_router/data/: crawled_alive_gov_bd_sites.txt  query_results.txt  table_names.txt
crawler_with_router/reports/: fleet_report_2026_04_28.txt  fleet_report_2026_04_29.txt
docs/: README.md  architecture.md
docs/agent/: README.md
docs/banglapedia_crawler/: README.md
docs/crawler/: README.md
docs/deepeval/: README.md
docs/elastic_search_engine/: README.md
docs/gov_crawler_without_llm/: README.md
recursive_crawler/: docker-compose.yml
recursive_crawler/DeepEval/: eval_adapters.py  eval_config.py  eval_helpers.py  evaluated_queries.csv  main_eval.py  queries.csv  test_system.ipynb  test_systems.py
recursive_crawler/DeepEval/.deepeval/: .deepeval_telemetry.txt
recursive_crawler/agent/: app.py  config.py  db_query.py  db_to_md.py  output.txt  tree_index.py  utils.py
recursive_crawler/banglapedia_crawler/: config.py  crawler.py  database.py  gatherer.py  main.py
recursive_crawler/crawler/: __init__.py  bd_recursive_crawler.py  duplicate_filter.py  link_extractor.py  live_domains.py  main_crawler.py
recursive_crawler/elastic_search_engine/: app.py  check_data.py  config.py  db_all_schemas.csv  db_all_schemas.md  db_tables_summary.csv  db_tables_summary.md  es_engine.py  full_db_summary.py  ingest_to_es.py  ingest_to_es_from_postgres.py  reset_es.py  setup_es.py  test.ipynb
recursive_crawler/gov_crawler_without_llm/: config.py  crawled_alive_gov_bd_sites.txt  crawler.py  database.py  gov_crawler_pipeline.py  loader.py  main.py
scripts/: update_modules.py
src/url_discovery_engine/: __init__.py  logger.py
src/url_discovery_engine/config/: __init__.py  settings.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_config.py
website_discovery/: .env.example  .gitignore  README.md  noxfile.py  pyproject.toml  requirements.txt
website_discovery/docs/: architecture.md  db_diagram.md  optimization.md
website_discovery/docs/code/: README.md
website_discovery/migrations/: 001_initial_schema.sql
website_discovery/scripts/: setup_database.py  verify_database.py
website_discovery/seeds/: input.txt
website_discovery/seeds/input/: test_seed.txt
website_discovery/src/: __init__.py  main.py
website_discovery/src/config/: __init__.py  settings.py
website_discovery/src/crawler/: __init__.py  engine.py  finder.py  queue.py
website_discovery/src/database/: __init__.py  connection.py  models.py  schema.py
website_discovery/src/services/: __init__.py  health.py  liveness.py  metrics.py
website_discovery/src/tools/: __init__.py  ingest_seed_urls.py  status_report.py
website_discovery/systemd/: url-discovery.service
website_discovery/tests/: __init__.py  conftest.py
website_discovery/tests/integration/: __init__.py  test_end_to_end.py
website_discovery/tests/unit/: __init__.py  test_config.py  test_crawler.py  test_database_models.py  test_services.py
